Fix out of bounds read when parsing fstab.

BUG: 429191